examples/failing/DiffKindsSameName/LibB.purs
module DiffKindsSameName.LibB where

foreign import kind DemoKind

foreign import data DemoData :: DemoKind

